--- a/src/app/marmo-landing/multilanguaje/multilanguaje.component.scss
+++ b/src/app/marmo-landing/multilanguaje/multilanguaje.component.scss
@@ -18,7 +18,7 @@ section {
    margin: 4% 0 15% 0;
    font-weight: 900;
    color: $grayColor3;
-   letter-spacing: 5px;
+   letter-spacing: 2px;
 }
 
 .box {
@@ -73,7 +73,7 @@ button {
    display: flex;
    justify-content: center;
    align-items: center;
-   z-index: 1;
+   // z-index: 1;
    .imgCont {
       width: 90%;
          img {
@@ -108,13 +108,14 @@ h3 {
    }
 
    .sectionSub {
-      margin: 4% 0 5% 0;
+      margin: 0 0 5% 0;
+      font-size: 22px;
    }
 
    .langs {
       width: 18%;
       display: block;
-      box-shadow: 0px 1px 5px #bcbcbc;
+      box-shadow: 0px 3px 5px #e6e5e5;
       .langBoxOn {
          justify-content: flex-start;
          border-radius: 50px 0 0 0;
@@ -134,6 +135,7 @@ h3 {
       position: absolute;
       top: 15%;
       left: 15%;
+      margin-bottom: 5%; 
    }
 
    h3 {
