--- a/src/app/marmo-landing/npmCommands/npmCommands.component.scss
+++ b/src/app/marmo-landing/npmCommands/npmCommands.component.scss
@@ -44,7 +44,7 @@ section {
     .npmBox {
         width: 100%;
         display: block;
-        box-shadow: 0px 1px 5px #bcbcbc;
+        box-shadow: 0px 3px 5px #e6e5e5;  
         background-color: white;
         padding: 5% 0 5% 0;
         border-radius: 25px;
@@ -101,6 +101,7 @@ h3 {
 
 .etc {
     display: block;
+    letter-spacing: -4px;
 }
 .ectCont {
     display: none;
@@ -155,10 +156,11 @@ h3 {
         .npmBox {
             width: 28%;
             display: block;
-            box-shadow: 0px 1px 5px #bcbcbc;
+            box-shadow: 0px 3px 5px #e6e5e5;
             background-color: white;
-            padding: 2% 2% 1.5% 2%;
+            padding: 2% 2% 1% 2%;
             border-radius: 40px;
+            margin: 0 0 5% 0;
             .langBox {
                  justify-content: flex-start;
                  margin: 0 0 0 3%;
@@ -190,6 +192,11 @@ h3 {
         font-weight: 400;
         letter-spacing: 0px;
         font-size: 25px;
+    }
+
+    h6 {
+        margin: 2% 0 3% 0;
+        font-size: 22px;
     }
 
     .etc {
